Fixed user icon appearing stretched

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -149,6 +149,7 @@ body {
 
 .userIcon {
     width: 45px;
+    height: 45px;
     border-radius: 100%;
 }
 
